--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('/Users/ACJLionsRoar/AndroidStudioProjects/NFCNoticeBoard/libs/guavalib.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta2'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     testCompile 'junit:junit:4.12'
-    compile files('/Users/ACJLionsRoar/AndroidStudioProjects/NFCNoticeBoard/libs/guavalib.jar')
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
