--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.miniproject.nfcnoticeboard"
         minSdkVersion 19
@@ -24,7 +24,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('/Users/ACJLionsRoar/AndroidStudioProjects/NFCNoticeBoard/libs/guavalib.jar')
+    compile files('/Users/aswincj/Developer/NFC-Notice-Board/libs/guavalib.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta2'
     compile 'com.google.firebase:firebase-auth:10.0.1'
