--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".NFCWriter" />
-        <activity android:name=".NFCReader" />
-        <activity android:name=".Authentication">
+        <activity android:name=".MainActivity" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NFCWriter" />
+        <activity android:name=".NFCReader" />
+        <activity android:name=".Authentication">
+        </activity>
 
-        <activity android:name=".Main2Activity"></activity>
     </application>
 
 </manifest>
