Fix some warnings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.lmntrx.android.smartpay.MainActivity" >
+        <activity android:name="com.lmntrx.android.smartpay.nfc.MainActivity" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.lmntrx.android.smartpay.NFCWriter" />
-        <activity android:name="com.lmntrx.android.smartpay.NFCReader" />
-        <activity android:name="com.lmntrx.android.smartpay.Authentication">
+        <activity android:name="com.lmntrx.android.smartpay.nfc.NFCWriter" />
+        <activity android:name="com.lmntrx.android.smartpay.nfc.NFCReader" />
+        <activity android:name="com.lmntrx.android.smartpay.nfc.Authentication">
         </activity>
 
     </application>
